image set acc to viewport

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+
+/* .navbar {
+  display: flex;
+  justify-content: center;
+}
+
+.navbar h1 {
+  color: #FC522E;
+  display: inline;
+} */
