--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +6,46 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: #E7ECF3; */
+  background-color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  margin: 0 5%;
+  padding: 15px;
+  border: 0.2px solid grey;
+}
+
+.navbar h1 {
+  color: #FC522E;
+  display: inline;
+  margin: 0;
+}
+
+.main {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin: 0 5%;
+}
+
+.meme-form {
+  margin: 20px;
+  width: max-content;
+}
+.meme-container {
+  width: max-content;
+}
+
+.meme-container img {
+  height: 70vh;
+  width: auto;
 }
